--- a/circle.yml
+++ b/circle.yml
@@ -3,13 +3,13 @@ machine:
     version: 0.10.28
 
 checkout:
-  - git clone $TEST_REPO
+  override:
+    - git clone $TEST_REPO
 
 dependencies:
-  pwd: $TEST_REPO_DIR
   override:
-    - npm install
-    - sh -c "if [ '$HAPI_REPO' ] && [ '$HAPI_COMMIT' ]; then sh -c 'cd node_modules; rm -r hapi; git clone $HAPI_REPO; cd hapi; git checkout $HAPI_COMMIT; npm install;' fi"
+    - cd $TEST_REPO_DIR &&  npm install
+    - sh -c "if [ '$HAPI_REPO' ] && [ '$HAPI_COMMIT' ]; then sh -c 'cd $TEST_REPO_DIR\node_modules; rm -r hapi; git clone $HAPI_REPO; cd hapi; git checkout $HAPI_COMMIT; npm install;' fi"
 test:
   override:
     - php ./test-suite/run.php --unit-tests
