--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,4 @@ dependencies:
     - sh -c "if [ '$HAPI_REPO' ] && [ '$HAPI_COMMIT' ]; then sh -c 'cd $TEST_REPO_DIR\node_modules; rm -r hapi; git clone $HAPI_REPO; cd hapi; git checkout $HAPI_COMMIT; npm install;'; fi"
 test:
   override:
-    - npm test
-      pwd: $TEST_REPO_DIR
+    - cd $TEST_REPO_DIR && npm test
