--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,9 @@ checkout:
 dependencies:
   override:
     - cd $TEST_REPO_DIR &&  npm install
-    - sh -c "if [ '$HAPI_REPO' ] && [ '$HAPI_COMMIT' ]; then sh -c 'cd $TEST_REPO_DIR\node_modules; rm -r hapi; git clone $HAPI_REPO; cd hapi; git checkout $HAPI_COMMIT; npm install;'; fi"
+    - sh -c "if [ '$HAPI_REPO' ]; then sh -c 'cd $TEST_REPO_DIR\\node_modules; rm -r hapi; git clone $HAPI_REPO'; fi"
+    - sh -c "if [ '$HAPI_REPO' ] && [ '$HAPI_COMMIT' ]; then sh -c 'cd $TEST_REPO_DIR\\node_modules\\hapi; git checkout $HAPI_COMMIT'; fi"
+    - sh -c "if [ '$HAPI_REPO' ]; then sh -c 'cd $TEST_REPO_DIR\\node_modules\\hapi; npm install'; fi"
 test:
   override:
     - cd $TEST_REPO_DIR && npm test
