--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,8 @@ checkout:
 dependencies:
   override:
     - cd $TEST_REPO_DIR &&  npm install
-    - cd $TEST_REPO_DIR &&  sh -c '$FLOW_CMD'
+    - cd $TEST_REPO_DIR &&  sh -c 'echo $FLOW_CMD' > flow_dep_runner.sh
+    - cd $TEST_REPO_DIR &&  sh ./flow_dep_runner.sh
 test:
   override:
     - mkdir -p $CIRCLE_TEST_REPORTS/rspec
