added test branch support

--- a/circle.yml
+++ b/circle.yml
@@ -8,10 +8,9 @@ checkout:
 
 dependencies:
   override:
+    - cd $TEST_REPO_DIR &&  git checkout $TEST_BRANCH
     - cd $TEST_REPO_DIR &&  npm install
-    - cd $TEST_REPO_DIR &&  sh -c 'echo $FLOW_CMD' > flow_dep_runner.sh
-    - cd $TEST_REPO_DIR &&  cat flow_dep_runner.sh
-    - cd $TEST_REPO_DIR &&  sh ./flow_dep_runner.sh
+    - cd $TEST_REPO_DIR &&  sh -c 'echo $FLOW_CMD' > flow_dep_runner.sh && sh ./flow_dep_runner.sh
 test:
   override:
     - mkdir -p $CIRCLE_TEST_REPORTS/rspec
